# embed-src

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  action.yml  example.yml  install.sh  llms.txt  sr.yaml  teasr.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  ci.yml  release.yml
showcase/demo/: README.after.md  README.md
skills/embed-src/: SKILL.md
skills/fsrc/: SKILL.md
src/: embed.rs  main.rs
tests/: integration.rs
tests/fixtures/: host.css  host.html  host.py  host.rs  host.sql  host.yml  host_expected.css  host_expected.html  host_expected.py  host_expected.rs  host_expected.sql  host_expected.yml  sample.md  sample_expected.md
