[package]
name = "fsrc"
version = "4.0.0"
edition = "2021"
description = "Embed source files into any text file"
license = "Apache-2.0"
repository = "https://github.com/urmzd/fsrc"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"
regex = "1"
agentspec-update = "0.6.0"
